@@ -10,7 +10,8 @@ import com.cinemax.payload.utils.MessageUtil;
 import com.cinemax.payload.response.business.ImageResponse;
 import com.cinemax.repository.businnes.ImageRepository;
 import com.cinemax.repository.businnes.MovieRepository;
-import jakarta.transaction.Transactional;
+// Doğru Transactional import edildiğinden emin olun
+import org.springframework.transaction.annotation.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -28,9 +29,10 @@ public class ImageService {
     private final MessageUtil messageUtil;
     private final MovieRepository movieRepository;
 
-    public Image saveImage(MultipartFile request, Long movieId) {
+    // Tek resim kaydetme (dahili kullanım)
+    // Not: Bu metodun @Transactional olması gerekebilir, çağıran metodlar @Transactional olduğu için şimdilik eklenmedi.
+    private Image saveImage(MultipartFile file, Long movieId) { // 'request' -> 'file' olarak değiştirildi daha anlaşılır olması için
 
-        // Movie'yi veritabanından bul, yoksa hata fırlat
         Movie movie = movieRepository.findById(movieId)
                 .orElseThrow(() -> new ResourceNotFoundException(
                         String.format(messageUtil.getMessage("error.movie.not.found"), movieId)
@@ -39,41 +41,113 @@ public class ImageService {
         Image image;
         try {
             image = Image.builder()
-                    .name(request.getOriginalFilename())       // Resim adı
-                    .featured(false)                           // Featured false
-                    .type(request.getContentType())            // MIME tipi png/img vs
-                    .data(ImageUtil.compressImage(request.getBytes())) // Sıkıştırılmış veri
-                    .movie(movie)                              // Movie objesini direkt kullan
+                    .name(file.getOriginalFilename())
+                    .featured(false)
+                    .type(file.getContentType())
+                    .data(ImageUtil.compressImage(file.getBytes()))
+                    .movie(movie)
                     .build();
         } catch (IOException e) {
-            throw new ImageException(e.getMessage());
+            // IOException yerine ImageException fırlatmak daha uygun olabilir
+            throw new ImageException("Could not process image file: " + file.getOriginalFilename(), e);
         }
 
         return imageRepository.save(image);
     }
 
+    // Çoklu resim oluşturma
+    @Transactional // Yazma işlemi olduğu için
+    public List<ImageResponse> createImage(List<MultipartFile> files, Long movieId) { // 'request' -> 'files' olarak değiştirildi
 
-    @Transactional
-    public List<ImageResponse> createImage(List<MultipartFile> request, Long movieId){
-
-        // Eğer gelen istek (request) boşsa, özel bir ImageException fırlatılır.
-        if (request.isEmpty()){
-            throw new ImageException(String.format(messageUtil.getMessage("error.immage.not.found")));
+        // Gelen listenin null veya boş olup olmadığını kontrol et
+        if (files == null || files.isEmpty() || files.stream().allMatch(MultipartFile::isEmpty)) {
+            // Mesaj anahtarı varsayıldı, kendi anahtarınızı kullanın
+            throw new ImageException(messageUtil.getMessage("error.image.list.empty"));
         }
 
-        // Verilen movieId ile film veritabanında aranır; bulunamazsa ResourceNotFoundException fırlatılır.
         Movie movie = movieRepository.findById(movieId)
                 .orElseThrow(() -> new ResourceNotFoundException(String.format(messageUtil.getMessage("error.movie.not.found"), movieId)));
 
-        List<Image> images = movie.getImages();
+        List<Image> currentImages = movie.getImages();
+        int currentImageCount = (currentImages == null) ? 0 : currentImages.size();
 
-        // Eğer mevcut resim sayısı ile yüklenmek istenen resim sayısının toplamı 10'u aşarsa, özel bir ImageException fırlatılır.
-        if(images != null && images.size() + request.size() > 10){
-            throw new ImageException(String.format(messageUtil.getMessage("error.image.too.many")));
+        int maxImagesAllowed = 10; // Limiti bir konfigürasyon dosyasından almak daha iyi
+        // Boş olmayan dosya sayısını hesapla
+        long validFilesCount = files.stream().filter(file -> !file.isEmpty()).count();
+
+        if (currentImageCount + validFilesCount > maxImagesAllowed) {
+            // Mesaj anahtarı varsayıldı
+            throw new ImageException(String.format(messageUtil.getMessage("error.image.too.many"), maxImagesAllowed));
         }
 
-        List<Image> savedImage=request.stream().map(t->saveImage(t, movieId)).toList();
-        return savedImage.stream().map(imageMapper::toImageResponse).collect(Collectors.toList());
+        // Boş olmayan dosyaları işle ve kaydet
+        List<Image> savedImages = files.stream()
+                .filter(file -> !file.isEmpty())
+                .map(file -> saveImage(file, movieId)) // saveImage metodu çağrılıyor
+                .collect(Collectors.toList());
 
+        // Kaydedilenleri DTO'ya çevir
+        return savedImages.stream()
+                .map(imageMapper::toImageResponse) // ImageMapper'daki metot kullanılıyor
+                .collect(Collectors.toList());
+    }
+
+    // I01: ID ile resim getirme
+    @Transactional(readOnly = true) // Sadece okuma işlemi
+    public ImageResponse getImageById(Long imageId) {
+        Image image = imageRepository.findById(imageId)
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        // Mesaj anahtarı varsayıldı
+                        String.format(messageUtil.getMessage("error.image.not.found.id"), imageId)
+                ));
+        // Mapper ile DTO'ya çevir ve döndür
+        return imageMapper.toImageResponse(image);
+    }
+
+    // I03: ID ile resim silme
+    @Transactional // Veritabanını değiştirdiği için
+    public ImageResponse deleteImageById(Long imageId) {
+        Image image = imageRepository.findById(imageId)
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        // Mesaj anahtarı varsayıldı
+                        String.format(messageUtil.getMessage("error.image.not.found.id"), imageId)
+                ));
+
+        // Eğer resim bir filmin posteri ise, filmden poster bilgisini kaldır
+        if (image.getPosterOfMovie() != null) {
+            Movie movie = image.getPosterOfMovie();
+            movie.setPoster(null);
+            movieRepository.save(movie); // Film entity'sini güncelle
+        }
+
+        imageRepository.delete(image); // Resmi sil
+
+        // Silinen resmin bilgilerini (data olmadan) döndür
+        return imageMapper.toImageResponseWithoutData(image); // Data'sız mapper metodu kullanılırsa daha iyi
+        /* Eğer toImageResponseWithoutData metodu yoksa:
+        return ImageResponse.builder()
+               .id(image.getId())
+               .name(image.getName())
+               .type(image.getType())
+               .featured(image.isFeatured())
+               .movieId(image.getMovie() != null ? image.getMovie().getId() : null)
+               .build();
+        */
+    }
+
+    // I04: ID ile resmin 'featured' durumunu güncelleme
+    @Transactional // Veritabanını değiştirdiği için
+    public ImageResponse updateImageFeaturedStatus(Long imageId, boolean featured) {
+        Image image = imageRepository.findById(imageId)
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        // Mesaj anahtarı varsayıldı
+                        String.format(messageUtil.getMessage("error.image.not.found.id"), imageId)
+                ));
+
+        image.setFeatured(featured); // featured durumunu güncelle
+        Image updatedImage = imageRepository.save(image); // Değişikliği kaydet
+
+        // Güncellenmiş resmi DTO olarak döndür
+        return imageMapper.toImageResponse(updatedImage);
     }
 }
